add cors configs